welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:13: error: not found: value prendreBiscuit
    prendreBiscuit()
    ^