welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    while (!estSurBiscuit){
    	if (isFacingTrail == true){
    		avance()
    		baisseBrosse()
    		leveBrosse()
    	}
    	else{
    		gauche()
    	}
    }
    prendreBiscuit()
}

def isFacingTrail():Boolean = {
    if(estFaceMur){
    	return false
    }
    avance()
    if(getCouleurSol() == Color.green){
    	recule()
    	return true
    }
    else{
    	recule()
    	return false
    }
}        
